src/test/ui/codemap_tests/issue-28308.stderr
error: cannot apply unary operator `!` to type `&'static str`
  --> $DIR/issue-28308.rs:12:5
   |
12 |     assert!("foo");
   |     ^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate

error: aborting due to previous error

